add example searching

--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
                 <p>scale make the item bigger or smaller than its size</p>
                 <img src="images/pexels-jeremy-bishop-3464632.jpg" alt="">
             </div>
-            <div class="card">
-                <h3>translate</h3>
+            <div class="card matrix">
+                <h3>matrix</h3>
                 <p>scale make the item bigger or smaller than its size</p>
                 <img src="images/CSS3_logo_and_wordmark.svg.png" alt="">
             </div>
@@ -66,5 +66,13 @@
             </div>
         </div>
     </div>
+<br>
+<br>
+<br>
+<input type="text" id="searcing" class="search" placeholder="search here">
+<button onclick="search()">send</button>
+    <script src="search.js"></script>
+
+
 </body>
 </html>
